<resources>
    <string name="app_name">RockPaperScissor</string>
    <string name="sci">TODO</string>
    <string name="roc">TODO</string>
    <string name="pap">TODO</string>
    <string name="todot">TODO</string>
    <string name="todo">TODO</string>
    <string name="todoi">TODO</string>
    <string name="todohh">TODO</string>
    <string name="todolll">TODO</string>
    <string name="todohjkl">TODO</string>
    <string name="todossd">TODO</string>
    <string name="todovv">TODO</string>
    <string name="todoio">TODO</string>
    <string name="todocccc">TODO</string>
    <string name="tododcv">TODO</string>
    <string name="tododfg">TODO</string>
</resources>