<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Scissor">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="99dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="99dp"
        android:contentDescription="@string/sci"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/scissor" />

    <ImageButton
        android:id="@+id/imageButton11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded"

        android:contentDescription="@string/todossd"
        android:foregroundGravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageButton12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:srcCompat="@drawable/papersu"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/imageButton12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded"

        android:contentDescription="@string/todoio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageButton13"
        app:layout_constraintStart_toEndOf="@+id/imageButton11"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/scissorrsu" />

    <ImageButton
        android:id="@+id/imageButton13"
        android:layout_width="wrap_content"
        android:background="@drawable/rounded"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageButton12"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:srcCompat="@drawable/rockkuk"
        android:contentDescription="@string/todovv" />
</androidx.constraintlayout.widget.ConstraintLayout>